tests/extensions/forLoops/valid/forPrintLoopSideEffect2.wacc
# Prints i having each element in single line.

# Output:
# 0
# 2
# 4
# 6
# 8
# 10

begin
	for (int i = 0; i < 11; i = i + 2) do
		println i 
	done
end