tests/extensions/forLoops/syntaxErr/forMissingRParen.wacc
# for missing closing bracket

# Output:
# syntax_error

# Exit:
# 100

begin
  for (int i = 0; i < 5; i++ do
    skip
  done
end